--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
+    "next-cloudinary": "^4.12.0",
     "next-superjson-plugin": "^0.5.8",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -36,6 +37,8 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "prisma": "^4.14.1"
   }
 }
