--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@next-auth/prisma-adapter": "^1.0.6",
-    "@prisma/client": "4.14.1",
+    "@prisma/client": "4.15.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
@@ -22,7 +23,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
-    "next": "13.4.4",
+    "next": "13.4.5-canary.5",
     "next-auth": "^4.22.1",
     "next-cloudinary": "^4.12.0",
     "next-superjson-plugin": "^0.5.8",
@@ -39,6 +40,6 @@
     "@types/bcrypt": "^5.0.0",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "prisma": "^4.14.1"
+    "prisma": "^4.15.0"
   }
 }
