--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "date-fns": "^2.30.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "lodash-es": "^4.17.21",
     "next": "13.4.5-canary.5",
     "next-auth": "^4.22.1",
     "next-cloudinary": "^4.12.0",
     "next-superjson-plugin": "^0.5.8",
     "postcss": "8.4.23",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.1",
@@ -36,10 +39,12 @@
     "react-select": "^5.7.4",
     "react-spinners": "^0.13.8",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/lodash-es": "^4.17.8",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "prisma": "^4.15.0"
