--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,28 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "chrome",
+      "type": "node-terminal",
       "request": "launch",
-      "name": "Launch Chrome against localhost",
-      "url": "http://localhost:3000",
-      "webRoot": "${workspaceFolder}"
+      "name": "server",
+      "command": "npm run dev"
+    },
+    {
+      "name": "client",
+      "type": "pwa-chorme",
+      "request": "launch",
+      "url": "http://localhost:3000"
+    },
+    {
+      "name": "full stack",
+      "type": "node-terminal",
+      "request": "launch",
+      "command": "npm run dev",
+      "console": "integratedTerminal",
+      "serverReadyAction": {
+        "pattern": "started server on .+, url: (https?://.+)",
+        "uriFormat": "%s",
+        "action": "debugWithChrome"
+      }
     }
   ]
 }
